@@ -13,6 +13,7 @@
 ===============================
 + New BitmapSourceExtensions class:
   + New GetReadableBitmapData method: to get an IReadableBitmapData data for all pixel formats.
+  + New ConvertPixelFormat methods
 + New WriteableBitmapExtensions class:
   + New GetWritableBitmapData method: to get an IWritableBitmapData data for all pixel formats.
   + New GetReadWriteBitmapData method: to get an IReadWriteBitmapData data for all pixel formats.
